@@ -3,4 +3,5 @@
 flib-keep-open=Keep open
 flib-settings=Settings
 # Translation progress GUI
-flib-translating-dictionaries=Translating dictionaries
+flib-translating-dictionaries=Translating dictionaries [img=info]
+flib-translating-dictionaries-description=Mods that use the Factorio Library's dictionary system request translations over time in order to allow text search in your native language. This GUI shows the progress of each mod's translations for each required language. This GUI will automatically remove itself once all translations have finished.
